tests/fixtures/pass/coalesce_infer_right_associative_none.sali
let main(): i32 = Option(i32).None ?? Option(_).None ?? 42
